--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h3>I'm Wissem</h3>
         <span class="tag">Full-Stack Developer</span>
 
-        <p>I am a Full-Stack developer based in Monastir,Tunis.
+        <p>I am a Full-Stack developer based in Tunis.
           I am an Information Computer Science from FSM.
           I am very passionate about improving my coding skills & developing applications & websites.
           I build WebApps and Websites using Munlipal softwares and languges.
@@ -370,5 +370,6 @@
   <script src="assets/js/script.js"></script>
 
 </body>
+
 
 </html>
